--- a/jekyll-src/_sass/foundation-components/_top-bar.scss
+++ b/jekyll-src/_sass/foundation-components/_top-bar.scss
@@ -159,7 +159,7 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
 
       // Topbar Global list Styles
       ul {
-        margin-bottom: 0;
+        display: flex;
         list-style: none;
       }
 
